Fixing author in metadata.html. And adding {{SITENAME}} in archives.html

--- a/templates/archives.html
+++ b/templates/archives.html
@@ -8,7 +8,7 @@
 	<div class="entry-container">
 	    <article  class="entry">
 		<header>
-		    <a href=""><h2>cat ~/.dgzen_history</h2></a>
+            <a href=""><h2>cat ~/.{{SITENAME}}_history</h2></a>
 		</header>
 
 		{% for article in dates %}
