--- a/templates/metadata.html
+++ b/templates/metadata.html
@@ -1,6 +1,6 @@
 	
 	<meta name="description" content="{{SITESUBTITLE}}">
-	<meta name="author" content="David">
+    <meta name="author" content="{{AUTHOR}}">
 	<meta name="robots" content="index,follow">
 
 
