--- a/templates/base.html
+++ b/templates/base.html
@@ -41,11 +41,11 @@
 	<!-- Highlight -->
 	<link rel="stylesheet" href="{{ SITEURL}}/{{ THEME_STATIC_DIR }}/css/pygment.css"/>
 
-	<link href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">
-	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href="http://fonts.useso.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">
+	<link href='http://fonts.useso.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.useso.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.useso.com/css?family=Noto+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.useso.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
@@ -116,7 +116,7 @@ ga('send', 'pageview');
 
 
 			{%if article %}	    
-			{% include 'disqus.html' %}
+			{% include 'duoshuo.html' %}
 			{%endif%}
 		    </div>
 		</div>
