--- a/templates/duoshuo.html
+++ b/templates/duoshuo.html
@@ -3,7 +3,7 @@
     <div class="alpha span9">
 			<!-- 多说评论框 start -->
 			<!--data-thread-key="的ID"-->
-			<div class="ds-thread" data-title="{{article.title}}" data-url="{{article.url}}"></div>
+			<div class="ds-thread" data-thread-key="{{ article.url|md5hash }}" data-title="{{ article.title|striptags }}" data-url="{{article.url}}"></div>
 			<!-- 多说评论框 end -->
 			<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 			<script type="text/javascript">
